--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <center><h1>Resume saya</h1><hr></center>
-        <center><img src="../RESUME Saya/assets/B1.jpg" width="300 px"  </center>
+        <center><img src="./assets/B1.jpg" width="300 px"  </center>
         <center><p>Risnawati,S.hut</p> </center><hr>
 <body bgcolor="#FFB6C1"></body>
     </header>
