--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body bgcolor="#FFB6C1"></body>
     </header>
     <h2>Ringkasan</h2><hr>
-    <p>Seorang pengembang web sederhana dengan minat dalam desain antar muka pengguna</p>
+    <p>Seorang pengembang web berpengalaman dengan minat dalam desain antar muka pengguna</p>
 <h2><u>Pendidikan</h2></u>
 <ul>
     <li>S1 Kehutanan (2016-2021)</li>
